--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.15.2",
-    "jest": "^19.0.2"
+    "jest": "^19.0.2",
+    "moment": "^2.17.1"
   }
 }
