--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "express": "^4.15.2",
     "jest": "^19.0.2",
-    "moment": "^2.17.1"
+    "moment": "^2.17.1",
+    "mongodb": "^2.2.25",
+    "shortid": "^2.2.8"
   }
 }
