--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jest": "^19.0.2",
     "moment": "^2.17.1",
     "mongodb": "^2.2.25",
+    "request": "^2.81.0",
     "shortid": "^2.2.8"
   }
 }
