--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "mongodb": "^2.2.25",
     "request": "^2.81.0",
     "shortid": "^2.2.8"
+  },
+  "devDependencies": {
+    "multer": "^1.3.0"
   }
 }
