--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "moment": "^2.17.1",
     "mongodb": "^2.2.25",
     "request": "^2.81.0",
-    "shortid": "^2.2.8"
-  },
-  "devDependencies": {
+    "shortid": "^2.2.8",
     "multer": "^1.3.0"
   }
 }
